# skill-master

./: .gitignore  README.md  main.py  pyproject.toml
.devcontainer/: docker-compose.yml
.devcontainer/bigquery/: docker-compose.yml
.devcontainer/python/: devcontainer.json  docker-compose.yml  dockerfile
.devcontainer/traefik/: docker-compose.yml  traefik.yml
.envfiles/: dev.env  staging.env
docs/: pipeline_diagram.drawio
docs/20251225/: 1_job_post_extraction.ipynb  2_jobpost_management.ipynb  file_description.txt  llm_review_helper_simple.py  result_extract_all.json  skills_llm1_pl_builder.py  skills_llm2_pl_assigner.py  standard_jd_generator.py  title_normalization.py
notebook/: 1-example.ipynb  1_job_post_extraction.ipynb  3-calling_llm.ipynb  4-bigquery-staging.ipynb  4-bigquery.ipynb  5-db_module.ipynb  6-JobPost.ipynb  7-JobPostExtracted.ipynb
src/: __init__.py  main.py
src/db/: __init__.py
src/item/: __init__.py
src/llm/: __init__.py
src/models/: JobPost.py  JobPostExtracted.py  __init__.py
src/pipeline/: extract_all_components.py  process_jobpost.py  processing_job.py
src/pipeline/phase1/: main.py
src/pipeline/phase1/function/: extract_all_components.py  var.py
src/pipeline/phase2/: process_jobpostextracted.py
src/server/: __init__.py  web.py
src/server/templates/: example.html  index.html
src/server/web/: __init__.py
src/tests/: test_pipeline.py
templates/: base.html  example.html  index.html
tests/: test_example.py  test_pipeline.py
