[project]
name = "skill-master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.127.0",
    "google-cloud-bigquery>=3.39.0",
    "jinja2>=3.1.6",
    "numpy>=2.3.5",
    "openai>=2.11.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "rapidfuzz>=3.14.3",
    "scikit-learn>=1.8.0",
    "tiktoken>=0.12.0",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
]

[tool.uv]
package = true
